--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "node-appwrite": "^14.1.0",
+    "plaid": "^30.0.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
